jcodebuddy generator for micro optimized and logback proxy variants